--- a/14_login/templates/home.html
+++ b/14_login/templates/home.html
@@ -3,9 +3,10 @@
     <form action="/auth" method="post">
         <p>You are not logged in. </p>
 
-        Username: <input type="text" name="username">
+        Username: <input type="text" name="username">   <font color="red"> {{incUser}} </font>
         <br>
-        Password: <input type="text" name="password">
+        Password: <input type="password" name="password">   <font color="red"> {{incPass}} </font>
+        <br>
         <input type="submit" name="Subl">
     </form>
 </body>
