--- a/14_login/templates/home.html
+++ b/14_login/templates/home.html
@@ -1,14 +1,29 @@
 <html>
-<body>
-    <form action="/auth" method="post">
-        <p>You are not logged in. </p>
+{% extends "base.html" %}
+    <head>
 
-        Username: <input type="text" name="username">   <font color="red"> {{incUser}} </font>
-        <br>
-        Password: <input type="password" name="password">   <font color="red"> {{incPass}} </font>
-        <br>
-        <input type="submit" name="Subl">
-    </form>
-</body>
+    </head>
+    <body>
+        <!-- {% set msgs = get_flashed_messages() %}
+            {% for each in msgs %}
+                {{each}}
+                <br>
+            {% endfor %} -->
+
+        {% block content %}
+        <form action="/auth" method="post">
+            <p>You are not logged in. </p>
+
+            Username: <input type="text" name="username">   <font color="red"> {{incUser}} </font>
+            <br>
+            Password: <input type="password" name="password">   <font color="red"> {{incPass}} </font>
+            <br>
+            <input type="submit" name="Subl">
+        </form>
+
+        {% endblock %}
+
+
+    </body>
 
 </html>
