--- a/25_rest/templates/home.html
+++ b/25_rest/templates/home.html
@@ -5,10 +5,11 @@
         <title></title>
     </head>
     <body>
+        <h1>Testing API</h1>
         <p>New adventures in RESTful APIs: </p>
             <br>
         <img src={{img}}>
-        <p> London has a lot of {{expl}} </p>
+        <p> London: {{expl}} </p>
 
     </body>
 </html>
